--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<p>In this project I analyze and visualize healthcare data with 
 										Python and Tableau to understand the risks leading to diabetes in patients.</p>
 								</header>
-								<a href="https://public.tableau.com/views/DiabetesPrediction_16878171726200/Story2?:language=en-US&:display_count=n&:origin=viz_share_link" class="image main"><img src="images/diabetes.jpg" alt="" /></a>
+								<a href="https://public.tableau.com/views/DiabetesPrediction_16878171726200/Story2?:language=en-US&:display_count=n&:origin=viz_share_link" class="image main"><img src="images/diabetes2.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://public.tableau.com/views/DiabetesPrediction_16878171726200/Story2?:language=en-US&:display_count=n&:origin=viz_share_link" class="button large">View Dashboard</a></li>
 								</ul>
