--- a/index.html
+++ b/index.html
@@ -139,6 +139,18 @@
 										<li><a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/sales.sql" class="button">View Code</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										
+										<h2><a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/Group%204%20Code.Rmd">Box Office Revenue Prediction<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/Group%204%20Code.Rmd" class="image fit"><img src="images/box-office.png" alt="" /></a>
+									<p>This is a predictive revenue analysis done on Box Office data from the last 20 years.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/Group%204%20Code.Rmd" class="button">View Code</a></li>
+									</ul>
+								</article>
 								
 		
 							</section>
