--- a/index.html
+++ b/index.html
@@ -1,181 +1,183 @@
 <!DOCTYPE HTML>
+<!--
+	Solid State by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
-    <title>Mallika Singh Portfolio</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body class="is-preload">
+	<head>
+		<title>Solid State by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<!-- Page Wrapper -->
-<div id="page-wrapper">
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
 
-    <!-- Header -->
-    <header id="header" class="alt">
-        <h1><a href="index.html">Mallika Singh</a></h1>
-        <nav>
-            <a href="#menu">Menu</a>
-        </nav>
-    </header>
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Solid State</a></h1>
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
+					</header>
 
-    <!-- Menu -->
-    <nav id="menu">
-        <div class="inner">
-            <h2>Menu</h2>
-            <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="https://www.linkedin.com/in/mallikasingh12/">LinkedIn</a></li>
-                <li><a href="https://github.com/mallikasingh11">GitHub</a></li>
-            </ul>
-            <a href="#" class="close">Close</a>
-        </div>
-    </nav>
+				<!-- Menu -->
+					<nav id="menu">
+						<div class="inner">
+							<h2>Menu</h2>
+							<ul class="links">
+								<li><a href="index.html">Home</a></li>
+								<li><a href="generic.html">Generic</a></li>
+								<li><a href="elements.html">Elements</a></li>
+								<li><a href="#">Log In</a></li>
+								<li><a href="#">Sign Up</a></li>
+							</ul>
+							<a href="#" class="close">Close</a>
+						</div>
+					</nav>
 
-    <!-- Banner -->
-    <section id="banner">
-        <div class="inner">
-            <div class="logo"><span class="icon fa-gem"></span></div>
-            <h2>Mallika Singh Portfolio</h2>
-            <p>Data Professional versed in Python, SQL, R, and Tableau with a passion for storytelling through analytics and visualizations</p>
-        </div>
-    </section>
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<div class="logo"><span class="icon fa-gem"></span></div>
+							<h2>This is Solid State</h2>
+							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+						</div>
+					</section>
 
-    <!-- Wrapper -->
-    <section id="wrapper">
+				<!-- Wrapper -->
+					<section id="wrapper">
 
-        <!-- Spotlight 1 -->
-        <section id="one" class="wrapper spotlight style1">
-            <div class="inner">
-                <a href="https://public.tableau.com/views/DiabetesPrediction_16878171726200/Story2" class="image">
-                    <img src="images/diabetes2.jpg" alt="" />
-                </a>
-                <div class="content">
-                    <h2 class="major">Diabetes Risk Modeling</h2>
-                    <p>Predictive analysis of healthcare and clinical data using Python and Tableau to understand diabetes risk factors.</p>
-                    <a href="https://public.tableau.com/views/DiabetesPrediction_16878171726200/Story2" class="special">View Dashboard</a>
-                </div>
-            </div>
-        </section>
+						<!-- One -->
+							<section id="one" class="wrapper spotlight style1">
+								<div class="inner">
+									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Magna arcu feugiat</h2>
+										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<a href="#" class="special">Learn more</a>
+									</div>
+								</div>
+							</section>
 
-        <!-- Spotlight 2 -->
-        <section id="two" class="wrapper alt spotlight style2">
-            <div class="inner">
-                <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/Covid.sql" class="image">
-                    <img src="images/covid.jpg" alt="" />
-                </a>
-                <div class="content">
-                    <h2 class="major">Data Exploration in SQL</h2>
-                    <p>Exploratory analysis of the World Health Organization Covid-19 dataset using MySQL.</p>
-                    <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/Covid.sql" class="special">View Project</a>
-                </div>
-            </div>
-        </section>
+						<!-- Two -->
+							<section id="two" class="wrapper alt spotlight style2">
+								<div class="inner">
+									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Tempus adipiscing</h2>
+										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<a href="#" class="special">Learn more</a>
+									</div>
+								</div>
+							</section>
 
-        <!-- Spotlight 3 -->
-        <section id="three" class="wrapper spotlight style3">
-            <div class="inner">
-                <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/data_cleaning.sql" class="image">
-                    <img src="images/nashville.jpg" alt="" />
-                </a>
-                <div class="content">
-                    <h2 class="major">Data Cleaning in SQL</h2>
-                    <p>Data cleaning and wrangling of the Nashville Housing dataset using MySQL.</p>
-                    <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/data_cleaning.sql" class="special">View Project</a>
-                </div>
-            </div>
-        </section>
+						<!-- Three -->
+							<section id="three" class="wrapper spotlight style3">
+								<div class="inner">
+									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">Nullam dignissim</h2>
+										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<a href="#" class="special">Learn more</a>
+									</div>
+								</div>
+							</section>
 
-        <!-- Grid of Other Projects -->
-        <section id="four" class="wrapper alt style1">
-            <div class="inner">
-                <h2 class="major">Other Projects</h2>
-                <p>Additional portfolio projects spanning data visualization, predictive modeling, and exploratory analysis.</p>
-                <section class="features">
+						<!-- Four -->
+							<section id="four" class="wrapper alt style1">
+								<div class="inner">
+									<h2 class="major">Vitae phasellus</h2>
+									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<section class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<h3 class="major">Sed feugiat lorem</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="special">Learn more</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<h3 class="major">Nisl placerat</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="special">Learn more</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3 class="major">Ante fermentum</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="special">Learn more</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<h3 class="major">Fusce consequat</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<a href="#" class="special">Learn more</a>
+										</article>
+									</section>
+									<ul class="actions">
+										<li><a href="#" class="button">Browse All</a></li>
+									</ul>
+								</div>
+							</section>
 
-                    <article>
-                        <a href="https://public.tableau.com/views/ConsultTrackerFinal/Dashboard1" class="image">
-                            <img src="images/metrics.jpg" alt="" />
-                        </a>
-                        <h3 class="major">Case Analyst Metric Dashboard</h3>
-                        <p>Analyst metric dashboard across different teams over time using Tableau.</p>
-                        <a href="https://public.tableau.com/views/ConsultTrackerFinal/Dashboard1" class="special">View Dashboard</a>
-                    </article>
+					</section>
 
-                    <article>
-                        <a href="https://public.tableau.com/views/FP_16792593363160/Story1" class="image">
-                            <img src="images/flight.jpg" alt="" />
-                        </a>
-                        <h3 class="major">Flight Price Prediction</h3>
-                        <p>Analysis of flight ticket prices over time and optimal purchase timing using Tableau.</p>
-                        <a href="https://public.tableau.com/views/FP_16792593363160/Story1" class="special">View Project</a>
-                    </article>
+				<!-- Footer -->
+					<section id="footer">
+						<div class="inner">
+							<h2 class="major">Get in touch</h2>
+							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<form method="post" action="#">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="email" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="4"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</form>
+							<ul class="contact">
+								<li class="icon solid fa-home">
+									Untitled Inc<br />
+									1234 Somewhere Road Suite #2894<br />
+									Nashville, TN 00000-0000
+								</li>
+								<li class="icon solid fa-phone">(000) 000-0000</li>
+								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
+								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
+								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</section>
 
-                    <article>
-                        <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/Diabetes-python.ipynb" class="image">
-                            <img src="images/diabetes.jpg" alt="" />
-                        </a>
-                        <h3 class="major">Diabetic Risk Modeling Python Notebook</h3>
-                        <p>Jupyter Notebook version of the diabetes risk analysis with Python.</p>
-                        <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/Diabetes-python.ipynb" class="special">View Code</a>
-                    </article>
+			</div>
 
-                    <article>
-                        <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/sales.sql" class="image">
-                            <img src="images/sales.jpg" alt="" />
-                        </a>
-                        <h3 class="major">E-Commerce Sales Exploratory Analysis</h3>
-                        <p>Exploratory analysis of e-commerce sales data using MySQL.</p>
-                        <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/sales.sql" class="special">View Code</a>
-                    </article>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-                    <article>
-                        <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/Group%204%20Code.Rmd" class="image">
-                            <img src="images/box-office.png" alt="" />
-                        </a>
-                        <h3 class="major">Box Office Revenue Prediction</h3>
-                        <p>Predictive revenue analysis on box office data from the past 20 years using R.</p>
-                        <a href="https://github.com/mallikasingh11/PortfolioProjects/blob/main/Group%204%20Code.Rmd" class="special">View Code</a>
-                    </article>
-
-                </section>
-            </div>
-        </section>
-
-    </section>
-
-    <!-- Footer -->
-    <section id="footer">
-        <div class="inner">
-            <h2 class="major">Get in touch</h2>
-            <p>Feel free to reach out for collaboration or opportunities!</p>
-            <ul class="contact">
-                <li class="icon solid fa-home">
-                    Cupertino, CA 95014
-                </li>
-                <li class="icon solid fa-phone">(408) 717-0811</li>
-                <li class="icon solid fa-envelope"><a href="mailto:mallika.singh554@gmail.com">mallika.singh554@gmail.com</a></li>
-                <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/mallikasingh12/">linkedin.com/in/mallikasingh12</a></li>
-                <li class="icon brands fa-github"><a href="https://github.com/mallikasingh11">github.com/mallikasingh11</a></li>
-                <li class="icon brands fa-instagram"><a href="https://www.instagram.com/mallikasingh11/">instagram.com/mallikasingh11</a></li>
-            </ul>
-            <ul class="copyright">
-                <li>&copy; Mallika Singh. All rights reserved.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-            </ul>
-        </div>
-    </section>
-
-</div>
-
-<!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
-
-</body>
+	</body>
 </html>
